Fixed awkward spacing issue and centering on NavBar

--- a/ProjectCivics.css
+++ b/ProjectCivics.css
@@ -17,32 +17,28 @@ img{
   margin: auto;
 
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  padding-left: 498px;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px
+  text-decoration: none;
+}
 
 .topnav {
   background-color: #333;
   overflow: hidden;
-  margin: 0;
-}
-
-.topnav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  display: inline-block;
-  padding-left: 496px;
-}
-
-.topnav li {
-  float: left;
-}
-
-.topnav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
 }
 
 .topnav a {
